--- a/backend-file-watcher/package.json
+++ b/backend-file-watcher/package.json
@@ -4,7 +4,7 @@
   "main": "processor.js",
   "bin": "processor.js",
   "scripts": {
-    "start": "node processor.js",
+    "start": "nodemon processor.js",
     "exe": "pkg . --out-path dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,7 @@
     "fs-extra": "^11.3.0",
     "mongoose": "^6.13.8",
     "node-cron": "^3.0.2",
+    "nodemon": "^3.1.10",
     "serialport": "^13.0.0",
     "xlsx": "^0.18.5"
   },
